media/sonarr/deployment.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr
        imagePullPolicy: Always
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: sonarr-config
          mountPath: /config
        - name: sonarr-downloads
          mountPath: /downloads
        - name: sonarr-tv
          mountPath: /tv
        resources:
          limits:
            cpu: 500m
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 2Gi
      volumes:
      - name: sonarr-config
        flexVolume:
          driver: rook.io/rook
          fsType: ceph
          options:
            fsName: media
            clusterName: rook
            path: /config/sonarr
      - name: sonarr-downloads
        flexVolume:
          driver: rook.io/rook
          fsType: ceph
          options:
            fsName: media
            clusterName: rook
            path: /downloads/completed
      - name: sonarr-tv
        flexVolume:
          driver: rook.io/rook
          fsType: ceph
          options:
            fsName: media
            clusterName: rook
            path: /library/videos/tv
