media/sonarr/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  ports:
  - name: sonarr
    port: 80
    targetPort: 8989
  selector:
    app: sonarr
