media/sonarr/ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: sonarr
  namespace: media
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-sonarr
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Sonarr"
spec:
  tls:
  - hosts:
    - sonarr.thuault.com
    secretName: sonarr-tls
  rules:
  - host: sonarr.thuault.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sonarr
          servicePort: 80
